--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             music.className = "music";
             music.style.opacity = 1;
         })
-        window.setTimeout(function () {
+        setTimeout(function () {
             audioMusic.play();
             /*播放*/
             /*边播放边缓存，触发事件canplay*/
