--- a/index.html
+++ b/index.html
@@ -200,13 +200,11 @@
             music.className = "music";
             music.style.opacity = 1;
         })
-        setTimeout(function () {
+        window.setTimeout(function () {
             audioMusic.play();
             /*播放*/
             /*边播放边缓存，触发事件canplay*/
-            audioMusic.addEventListener("canplay", function () {
-                music.className = "music musicMove";
-            })
+           
         }, 1000)
 
 
