--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             audioMusic.play();
             /*播放*/
             /*边播放边缓存，触发事件canplay*/
-           
+            music.className = "music musicMove";
         }, 1000)
 
 
