--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <audio src="audio/1.mp3" loop preload="none" id="audioMusic"></audio>
     </div>
     <div class="swiper-container">
-        <div class="swiper-wrapper">
+        <div class="swiper-wrapper" >
             <div class="swiper-slide slide1">
-                <img src="" alt="" class="back-img"/>
+                <img src="img/o-back-img.jpg" alt="" class="back-img"/>
                 <img src="img/o_1amb5pie41med17hgbqvu81afi1g.png" alt=""/>
                 <img src="img/o_1amb72c5sppv1r0re3e1ml61ba723.png" alt=""/>
                 <img src="img/o_1amb5pbgh12e01d24ucbrai11lb14.png" alt=""/>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="swiper-slide slide2">
-                <img src="" alt="" class="back-img"/>
+                <img src="img/o-back-img.jpg" alt="" class="back-img"/>
                 <img src="img/o_1anh311uepd61n03lfn1bh21m4sh.png" alt=""/>
                 <div id="pre">
                     <h2>基本信息</h2>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="swiper-slide slide3">
-                <img src="" alt="" class="back-img"/>
+                <img src="img/o-back-img.jpg" alt="" class="back-img"/>
                 <img src="img/o_1anh31712ue8ltc3j61av31s2l18.png" alt=""/>
                 <img src="img/o_1anh311ue1p4jme5vjq1p71apqf.png" alt=""/>
                 <div>掌握技能</div>
@@ -80,7 +80,7 @@
                 <div>ANGULAR</div>
             </div>
             <div class="swiper-slide slide4">
-                <img src="" alt="" class="back-img"/>
+                <img src="img/o-back-img.jpg" alt="" class="back-img"/>
                 <img src="img/o_1anh311uepd61n03lfn1bh21m4sh.png" alt=""/>
                 <img src="img/o_1anh311ue1p4jme5vjq1p71apqf.png" alt=""/>
                 <img src="img/o_1aivbjqvthre1sv3dsun7scg216.png" alt=""/>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="swiper-slide slide5">
-                <img src="" alt="" class="back-img"/>
+                <img src="img/o-back-img.jpg" alt="" class="back-img"/>
                 <img src="img/o_1anh317121mbc1i1k1me21fgc1pc17.png" alt=""/>
                 <img src="img/o_1anh31712ue8ltc3j61av31s2l18.png" alt=""/>
                 <img src="img/o_1ana08k8r1lu21iq3akj1d8l1npa21.png" alt=""/>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="swiper-slide slide6">
-                <img src="" alt="" class="back-img"/>
+                <img src="img/o-back-img.jpg" alt="" class="back-img"/>
                 <img src="img/o_1anh317121mbc1i1k1me21fgc1pc17.png" alt=""/>
                 <img src="img/o_1anh31712ue8ltc3j61av31s2l18.png" alt=""/>
                 <img src="img/cli_300px.png" alt=""/>
