--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <body>
 <div class="main">
     <div class="music">
-    <audio src="audio/1.mp3" loop preload="none" id="audioMusic"></audio>
+    <audio src="audio/1.mp3" loop preload="none" id="audioMusic">Your browser does not support the audio tag.
+</audio>
     </div>
     <div class="swiper-container">
         <div class="swiper-wrapper" >
