--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </div>
                 <div>姓名 : 唐永凯</div>
                 <div>性别 : 男</div>
-                <div>年龄 : 27</div>
-                <div>学历 : 大专</div>
+                <div>年龄 : 26</div>
+                <div>学历 : 本科</div>
                 <div>政治面貌 : 中共党员</div>
                 <div>手机 : 15938529083</div>
                 <div>邮编 : 463400</div>
